unpackaged/main/default/objects/PSBulkActionConfig__c/PSBulkActionConfig__c.object-meta.xml
<CustomObject>
    <description>What: Came from this repo: https://github.com/thedges/PSPhotoInspection. Need to review for removal</description>
    <label>PSBulkActionConfig</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>PSBulkActionConfig ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSBulkActionConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>