unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Bulk_Edit_Fields__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Edit_Fields__c</fullName>
    <label>Bulk Edit Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>