unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Header_Icon__c.field-meta.xml
<CustomField>
    <fullName>Header_Icon__c</fullName>
    <label>Header Icon</label>
    <length>200</length>
    <type>Text</type>
</CustomField>