unpackaged/main/default/objects/PSBulkActionConfig__c/fields/SAQL_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>SAQL_ID_Field__c</fullName>
    <label>SAQL ID Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>