unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Show_Bulk_Edit__c.field-meta.xml
<CustomField>
    <fullName>Show_Bulk_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Bulk Edit</label>
    <type>Checkbox</type>
</CustomField>