unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Show_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Show_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Chatter</label>
    <type>Checkbox</type>
</CustomField>