unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Show_Data__c.field-meta.xml
<CustomField>
    <fullName>Show_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Data</label>
    <type>Checkbox</type>
</CustomField>