unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Show_SAQL__c.field-meta.xml
<CustomField>
    <fullName>Show_SAQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show SAQL</label>
    <type>Checkbox</type>
</CustomField>