unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Show_Task__c.field-meta.xml
<CustomField>
    <fullName>Show_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Task</label>
    <type>Checkbox</type>
</CustomField>