unpackaged/main/default/objects/PSBulkActionConfig__c/fields/Tab_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Tab_Background_Color__c</fullName>
    <label>Tab Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>