unpackaged/main/default/objects/PSBulkActionConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Config_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>